# DMet

./: .readthedocs.yaml  CMakeLists.txt  README.md  requirements.txt
docs/: CMakeLists.txt  Doxyfile.in
docs/html/: _distrib_distance_8h_source.html  _eq_width_bin_8h_source.html  _point_distances_8h_source.html  annotated.html  class_eq_width_bin-members.html  class_eq_width_bin.html  classes.html  dir_4b8de973c18cbb0637e3a0b46711ff1c.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_9b59cf6179fe908cc491d3aa265d5a6a.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  namespace_d_met.html  namespacemembers.html  namespacemembers_func.html  namespaces.html  utils_8h_source.html
docs/html/search/: all_2.js  classes_0.js  namespaces_0.js  searchdata.js
docs/source/: binningdocs.rst  conf.py  distribdocs.rst  index.rst
docs/xml/: Doxyfile.xml  _distrib_distance_8h 2.xml  _distrib_distance_8h.xml  _distrib_distances_8cpp.xml  _eq_width_bin_8cpp 2.xml  _eq_width_bin_8cpp.xml  _eq_width_bin_8h 2.xml  _eq_width_bin_8h.xml  _point_distances_8cpp.xml  _point_distances_8h 2.xml  _point_distances_8h.xml  class_d_met_1_1_eq_width_bin 2.xml  class_d_met_1_1_eq_width_bin.xml  class_eq_width_bin.xml  dir_4b8de973c18cbb0637e3a0b46711ff1c 2.xml  dir_68267d1309a1af8e8297ef4c3efbcdba 2.xml  dir_9b59cf6179fe908cc491d3aa265d5a6a 2.xml  dir_d44c64559bbebec7f509842c48db8b23 2.xml  index 2.xml  index.xml  namespace_d_met 2.xml  namespace_d_met.xml  namespace_d_met_1_1_distrib 2.xml  namespace_d_met_1_1_distrib.xml  namespace_d_met_1_1_point_distances 2.xml  namespace_d_met_1_1_point_distances.xml  namespace_d_met_1_1_utils 2.xml  namespace_d_met_1_1_utils.xml  struct_d_met_1_1_eq_width_bin_1_1_bin 2.xml  struct_d_met_1_1_eq_width_bin_1_1_bin.xml  struct_eq_width_bin_1_1_bin.xml  utils_8cpp.xml  utils_8h 2.xml  utils_8h.xml
include/DMet/: DistribDistance.h  EqWidthBin.h  PointDistances.h  utils.h
src/DMet/: DistribDistances.cpp  EqWidthBin.cpp  PointDistances.cpp  utils.cpp
test/: CMakeLists.txt  minkowskiTests.csv
test/DMet/: BinningTests.cpp  ChebyshevStrTests.cpp  ChebyshevTests.cpp  Demo.cpp  EuclideanStrTests.cpp  EuclideanTests.cpp  JennsonShannonTests.cpp  KLDivTests.cpp  ManhattanStrTests.cpp  ManhattanTests.cpp  MinkowskiStrTests.cpp  MinkowskiTests.cpp  PointDistanceTests.cpp
test/scripts/: Demo.ipynb  DistScript.ipynb  EuclideanScript.ipynb  eucl_same  (+9 more)
